<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="32dp">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/ic_back"
        android:scaleType="fitCenter"
        android:contentDescription="@string/congratulations"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/create_account"
        android:textColor="@color/secondary_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSurnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/last_name_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/secondary_black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvSurnameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/first_name_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etSurname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/secondary_black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPatronymicLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/patronymic_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPatronymic"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/patronymic_hint"
        android:inputType="textPersonName"
        android:textColor="@color/secondary_black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvPatronymicLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvBirthdayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/birthdate_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etPatronymic"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etBirthday"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/birthdate_hint"
        android:inputType="date"
        android:textColor="@color/secondary_black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_calendar_small"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthdayLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/gender_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etBirthday"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/button_purple_rounded"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/btn_next"
        android:textAllCaps="false"
        android:textColor="@color/primary_lilac_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbMale" />

    <RadioButton
        android:id="@+id/rbFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/gender_female"
        android:textColor="@color/secondary_black"
        android:buttonTint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/rbMale"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderLabel" />

    <RadioButton
        android:id="@+id/rbMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/gender_male"
        android:buttonTint="@color/primary_gray_light"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
