<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_lilac_light"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/sign_in_subtitle"
        android:textColor="@color/secondary_gray_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/email_label"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/email_hint"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/password_label"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:drawableEnd="@drawable/ic_eye_small"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/primary_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_purple_rounded"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/btn_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/primary_lilac_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <Button
        android:id="@+id/btnLoginWithGoogle"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_transparent_rounded"
        android:drawableLeft="@drawable/ic_google"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textColor="@color/secondary_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_sign_up"
        android:textColor="@color/primary_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWithGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>
