<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_lilac_light"
    android:padding="32dp">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_back"
        android:scaleType="fitCenter"
        android:contentDescription="@string/congratulations"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/create_account"
        android:textColor="@color/secondary_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivUserPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        android:clipToOutline="true"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <TextView
        android:id="@+id/tvPhotoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/photo_hint"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        android:gravity="start"
        android:lineSpacingExtra="2dp"
        app:layout_constraintTop_toBottomOf="@+id/ivUserPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDriverLicenseNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/montserrat_regular"
        android:text="@string/driver_license_number_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvPhotoDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDriverLicenseNumber"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/driver_license_number_hint"
        android:inputType="text"
        android:textColor="@color/secondary_black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvDriverLicenseNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tvIssueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/issue_date_label"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etDriverLicenseNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etIssueDate"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_rounded_lightgray_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/birthdate_hint"
        android:inputType="date"
        android:textColor="@color/secondary_black"
        android:textColorHint="@color/primary_gray_light"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_calendar_small"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIssueDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvUploadDriverLicenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/montserrat_regular"
        android:text="@string/upload_driver_license_photo"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etIssueDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnUploadDriverLicense"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:text="@string/btn_upload_photo"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:drawableStartCompat="@drawable/ic_upload_small"
        app:layout_constraintTop_toBottomOf="@+id/tvUploadDriverLicenseLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUploadPassportLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/upload_passport_photo"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadDriverLicense" />

    <TextView
        android:id="@+id/btnUploadPassport"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:text="@string/btn_upload_photo"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:drawableStartCompat="@drawable/ic_upload_small"
        app:layout_constraintTop_toBottomOf="@+id/tvUploadPassportLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_purple_rounded"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/btn_next"
        android:textAllCaps="false"
        android:textColor="@color/primary_lilac_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadPassport" />

</androidx.constraintlayout.widget.ConstraintLayout>
